# tAI

./: .gitignore  README.md  create_tAI.sh  project_dir_structure.txt
tAI_Root/: CMakeLists.txt  setup.sh
tAI_Root/include/tAI/: Config.h  DuckDuckGoClient.h  GrokClient.h  HuggingfaceClient.h  IApiClient.h  OllamaClient.h  OllamaCloudClient.h  OpenAIClient.h  OpenRouterClient.h  Utils.h
tAI_Root/scripts/: install.sh  uninstall.sh  windows_install.bat  windows_uninstall.bat
tAI_Root/src/: Config.cpp  DuckDuckGoClient.cpp  GrokClient.cpp  HuggingfaceClient.cpp  OllamaClient.cpp  OllamaCloudClient.cpp  OpenAIClient.cpp  OpenRouterClient.cpp  Utils.cpp  main.cpp
